--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for Perl extension File::Find::Rule::VCS
 
 1.07 Wed  8 Jul 2009
 	- Added git support to resolve #43558: .git missing
+	- Extend test for bzr, git and default invocation
+	  (Jens Rehsack)
 
 1.06 Wed  8 Jul 2009
 	- Updated to Module::Install::DSL 0.91
