--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Perl extension File::Find::Rule::VCS
 
+{{$NEXT}}
+
 1.09      2023-04-28 12:43:47Z
         - tooling updates
 
